--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,5 @@
-Fix crashes on bad SGR like:  [48;3;141m blue-pink [49m
-Implement 24-bit colors
+Add support of more SGRs: like 4 (underline)
+Implement 24-bit colors. Main page of cheat.sh not work without it. Probably something else is missing too.
 Consider replacing hardcoded 256-color table with generator
 Add ability to close/disable SGR parameters in any order like real terminals do
 Probably more search-friendly name then ANSI_SGR2HTML
